# Ray-Tracer

./: CMakeLists.txt
include/: tuple.h
src/: CMakeLists.txt  tuple.cpp
tests/: CMakeLists.txt  test_math.cpp  test_tuple.cpp
